resolve horizontal scroll error

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+  html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -37,6 +42,11 @@ code {
   padding-bottom: 5rem;
   background-color: #2E8BC0 !important;
   color: white;
+  
+  width: 100%;
+
+
+
 }
 
 
